fixes edit and delete button alignment

--- a/filer/private/sass/components/_navigator.scss
+++ b/filer/private/sass/components/_navigator.scss
@@ -98,9 +98,7 @@ body {
             padding: 9px !important;
             span {
                 font-size: 16px;
-                &:before {
-                    vertical-align: middle;
-                }
+                line-height: 16px;
             }
         }
     }
